--- a/index.html
+++ b/index.html
@@ -19,23 +19,25 @@
 	<div class="dim"></div>
 
 	<header class="clearfix">
+
+		<div class="header-bg animated-scale"></div>
 		
 		<i class="fa fa-times" aria-hidden="true"></i>
-		<i class="fa fa-bars" aria-hidden="true"></i>
+		<i class="fa fa-bars animated-right" aria-hidden="true"></i>
 		
-		<div class="logo">
+		<div class="logo animated-right">
 		
 			<h2>Piksels</h2>
 		</div>
 		
-		<ul class="login-actions">
+		<ul class="login-actions animated-left">
 			<li><a href="#">Sign Up</a></li>
 			<li><a href="#">Log In</a></li>
 		</ul>
 
 	</header>
 	
-	<div class="tabs-wrap">
+	<div class="tabs-wrap animated-fade animated-top">
 		<ul class="tabs">
 			<li class="featured selected"><a href="#">Featured</a></li>
 			<li class="popular"><a href="#">Popular</a></li>
@@ -43,6 +45,8 @@
 			<li class="search"><a href="#"><i class="fa fa-search" aria-hidden="true"></i></a></li>
 		</ul>
 	</div>
+
+	<input type="search" autofocus="true" class="search-bar">
 
 	<nav class="drawer visible">
 		<h2>Categories</h2>
@@ -54,7 +58,9 @@
 			</ul>
 	</nav>
 	
-	<nav class="categories">
+	<nav class="categories animated-right">
+		<div class="banner"></div>
+		<div class="arrow-right"></div>
 		<h2>Categories</h2>
 			<ul>
 			    <li><a href="#">Nature</a></li>
@@ -63,6 +69,12 @@
 			    <li><a href="#">Entertainment</a></li>
 			</ul>
 	</nav>
+
+	<div class="load-bar">
+  	<div class="bar"></div>
+  	<div class="bar"></div>
+  	<div class="bar"></div>
+	</div>
 
 </body>
 
