Add header background

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 	
 	<div class="dim"></div>
 
-	<header class="clearfix">
+	<header class="clearfix animated-scale">
 
 		<div class="header-bg animated-scale"></div>
 		
